--- a/aws-code-pipeline-git/buildspec.yml
+++ b/aws-code-pipeline-git/buildspec.yml
@@ -16,20 +16,26 @@ phases:
   pre_build:
     commands:
       # - composer update
-      - composer install
-      - yarn install
+      # - composer install
+      # - yarn install
 
   build:
     commands:
-      - php artisan config:clear
+      - echo Build started on `date`
+      - echo Installing composer deps
+      - composer install --no-progress --no-suggest
+      - cp extra/.env ./
       - php artisan cache:clear
-      - php artisan view:clear
-      - php artisan route:clear 
+      # - php artisan config:clear
+      # - php artisan cache:clear
+      # - php artisan view:clear
+      # - php artisan route:clear 
 
   post_build:
     commands:
-      - php artisan migrate
-      - yarn run prod
+      - echo Build completed on `date`
+      # - php artisan migrate
+      # - yarn run prod
 
 artifacts:
   files:
