change build spec

--- a/aws-code-pipeline-git/buildspec.yml
+++ b/aws-code-pipeline-git/buildspec.yml
@@ -16,7 +16,7 @@ phases:
   pre_build:
     commands:
       # - composer update
-      # - composer install
+      - composer install
       # - yarn install
 
   build:
