change build spec

--- a/aws-code-pipeline-git/buildspec.yml
+++ b/aws-code-pipeline-git/buildspec.yml
@@ -15,8 +15,9 @@ phases:
 
   pre_build:
     commands:
+      - php composer.phar update
       # - composer update
-      - composer install
+      # - composer install
       # - yarn install
 
   build:
