--- a/aws-code-pipeline-git/buildspec.yml
+++ b/aws-code-pipeline-git/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       nodejs: 12.x
     commands:
       # - sudo apt install php8.1
-      - curl -sS https://getcomposer.org/installer | php 
+      - curl -sS https://getcomposer.org/installer | php
       - mv composer.phar /usr/local/bin/composer 
       - npm install -g yarn
       - npm i aws-sdk
@@ -17,7 +17,7 @@ phases:
     commands:
       - php composer.phar update
       # - composer update
-      # - composer install
+      - php composer.phar install
       # - yarn install
 
   build:
@@ -25,7 +25,7 @@ phases:
       - echo Build started on `date`
       - echo Installing composer deps
       - composer install --no-progress --no-suggest
-      - cp extra/.env ./
+      # - cp extra/.env ./
       - php artisan cache:clear
       # - php artisan config:clear
       # - php artisan cache:clear
