--- a/aws-code-pipeline-git/buildspec.yml
+++ b/aws-code-pipeline-git/buildspec.yml
@@ -8,7 +8,8 @@ phases:
     commands:
       # - sudo apt install php8.1
       - curl -sS https://getcomposer.org/installer | php
-      - mv composer.phar /usr/local/bin/composer 
+      - mv composer.phar /usr/local/bin/composer.phar
+      - alias composer='/usr/local/bin/composer.phar'
       - npm install -g yarn
       - npm i aws-sdk
       # - yum install -y jq
